Single click face select in edit mode is broken this morning. #64759

Closed
opened 2019-05-17 17:03:57 +02:00 by Gavin Scott · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 68), branch: master (modified), commit date: 2019-05-17 13:48, hash: fa9ab7b5a9
Worked: (optional) Current Buildbot build from last night (reportedly)

Short description of error
Click to select in face mode on the default cube in edit mode no longer works.

Exact steps for others to reproduce the error
Default cube, edit mode, face select mode, click on faces.
It either selects the wrong face (clicking on the top typically selects the face on the left side etc.) or selects nothing at all.

Perhaps caused by https://developer.blender.org/rBd7628d4b7fcd72af48e7b28891e63c9abd88e0a1 ?

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 68), branch: master (modified), commit date: 2019-05-17 13:48, hash: `fa9ab7b5a9` Worked: (optional) Current Buildbot build from last night (reportedly) **Short description of error** Click to select in face mode on the default cube in edit mode no longer works. **Exact steps for others to reproduce the error** Default cube, edit mode, face select mode, click on faces. It either selects the wrong face (clicking on the top typically selects the face on the left side etc.) or selects nothing at all. Perhaps caused by https://developer.blender.org/rBd7628d4b7fcd72af48e7b28891e63c9abd88e0a1 ?
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott

#64767 was marked as duplicate of this issue

#64767 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Can confirm on MacOS Mojave

Can confirm on MacOS Mojave

This issue was referenced by 02319549c3

This issue was referenced by 02319549c3061562349cf8ed98b3d77b88804824

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Chippy

Added subscriber: @Chippy
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64759
No description provided.