Fix T64759: Pick select selects an incorrect face in edit mode.

Bug introduced in T64759.